# PolitOS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
adapters/base/: README.md
agents/advocate/: README.md
agents/compliance/: README.md
agents/representative/: persona.yaml
agents/setup/: boundaries.yaml  persona.yaml  steps.yaml
agents/summarizer/: README.md
audit-log/: README.md
constitution/: core-principles.yaml  ethical-boundaries.yaml
docs/: getting-started.md
governance/decisions/: README.md
knowledge-base/: README.md
membership/: README.md  rights-matrix.yaml
prompts/: README.md
src/: cli.py  main.py  mcp_server.py
src/agents/: advocate.py  compliance.py  crew.py  kb_curator.py  moderator.py  policy_engine.py  representative.py  summarizer.py
src/api/: app.py  audit.py  chat.py  knowledge.py  proposals.py
src/core/: audit.py  config.py  constitution.py  kb.py  llm.py  setup.py
src/scaffold/: .env.example  CLAUDE.md
src/scaffold/agents/kb-curator/: README.md
src/scaffold/agents/moderator/: README.md
src/scaffold/agents/policy-engine/: README.md
src/scaffold/agents/representative/: boundaries.yaml  escalation.yaml
src/scaffold/agents/setup/: README.md  domains.yaml  (+1 more)
src/scaffold/config/: party.config.example.yaml
src/scaffold/constitution/: README.md  legal-constraints.yaml
src/scaffold/governance/: README.md  deliberation-protocol.yaml  sortition.yaml  voting-rules.yaml
