[project]
name = "politos"
version = "0.1.0"
description = "PolitOS — AI-governed political organization runtime"
requires-python = ">=3.11"
dependencies = [
    "crewai[anthropic]>=0.86.0",
    "crewai-tools>=0.17.0",
    "litellm>=1.50.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
politos = "src.mcp_server:main"
politos-mcp = "src.mcp_server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
